--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "request-promise": "^4.2.4",
     "socket-io": "^1.0.0",
     "socket.io": "^2.2.0",
-    "static-favicon": "^2.0.0-alpha"
+    "static-favicon": "^2.0.0-alpha",
+    "winston": "^3.2.1",
+    "winston-logstash": "^0.4.0",
+    "winston-logstash-transport": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
